[package]
name = "easy-jsonrpc"
description = """
Convert a trait definition into a jsonrpc api.
"""
repository = "https://github.com/layer1capital/easy-jsonrpc"
version = "0.5.3"
authors = ["Andrew Dirksen <andrew@dirksen.com>"]
license = "Apache-2.0"
documentation = "https://docs.rs/easy-jsonrpc"
edition = "2021"
readme = "readme.md"
keywords = ["json", "rpc", "macro", "client", "server"]

[dependencies]
easy-jsonrpc-proc-macro = { path = "./proc_macros", version = "0.5.0" }
serde_json = "1"
serde = "1"
jsonrpc-core = "18.0.0"
rand = "0.8.5"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
reqwest = { version =  "0.12.9", features = ["json", "blocking"] }
warp = "0.3.7"
